ucb/source/ucp/webdav-neon/NeonSession.cxx
@@ -1624,6 +1624,10 @@ bool NeonSession::LOCK( NeonLock * pLock,
     TimeValue startCall;
     osl_getSystemTime( &startCall );
 
+    // save the current requested timeout, because ne_lock_refresh uses
+    // pLock->timeout as an out parameter. This prevents a feedback-loop,
+    // where we would request a shorter timeout on each refresh.
+    long timeout = pLock->timeout;
     const int theRetVal = ne_lock_refresh(m_pHttpSession, pLock);
     if (theRetVal == NE_OK)
     {
@@ -1631,7 +1635,6 @@ bool NeonSession::LOCK( NeonLock * pLock,
             = lastChanceToSendRefreshRequest( startCall, pLock->timeout );
 
         SAL_INFO( "ucb.ucp.webdav", "LOCK (refresh) - Lock successfully refreshed." );
-        return true;
     }
     else
     {
@@ -1648,6 +1651,8 @@ bool NeonSession::LOCK( NeonLock * pLock,
         }
         return false;
     }
+    pLock->timeout = timeout;
+    return theRetVal;
 }
 
 void NeonSession::UNLOCK( const OUString & inPath,
